--- a/res/css/mainMenu/mainMenu.css
+++ b/res/css/mainMenu/mainMenu.css
@@ -2,6 +2,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	flex-flow: row wrap;
 
 	color: var(--color-primary);
 }
@@ -12,15 +13,17 @@
 
 .game {
 	--game-width: 300px;
+	--game-height: 450px;
 
 	display: flex;
 	align-items: center;
-	justify-content: center;
 	flex-direction: column;
 
 	width: var(--game-width);
+	height: var(--game-height);
 	background: var(--color-quinary-light);
 	padding: 0 0.5rem 0.5rem 0.5rem;
+	margin: 0.5rem;
 }
 
 .game > h3 {
