--- a/res/css/common/header/header.css
+++ b/res/css/common/header/header.css
@@ -1,55 +1,55 @@
 :root {
-    --header-height: 6rem;
-    --header-logo-margin: 0.8rem;
-    --header-link-margin: 3rem;
+	--header-height: 6rem;
+	--header-logo-margin: 0.8rem;
+	--header-link-margin: 3rem;
 }
 
 body:nth-child(2) {
-    margin-top: calc(var(--header-height) + var(--body-margin));
+	margin-top: calc(var(--header-height) + var(--body-margin));
 }
 
 #header {
-    background: var(--color-quinary);
-
-    position: fixed;
-    top: 0;
-    z-index: 100;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    margin-left: 0px;
-
-    width: 100%;
-    height: var(--header-height);
+	background: var(--color-quinary);
+	
+	position: fixed;
+	top: 0;
+	z-index: 100;
+	
+	display: flex;
+	align-items: center;
+	/* justify-content: center; */
+	
+	margin-left: 0px;
+	
+	width: 100%;
+	height: var(--header-height);
 }
 
 #header .logo {
-    margin: var(--header-logo-margin);
-
-    height: calc(var(--header-height) - var(--header-logo-margin) * 2);
-
-    border-radius: calc(var(--header-height) * 0.1);
+	margin: var(--header-logo-margin);
+	
+	height: calc(var(--header-height) - var(--header-logo-margin) * 2);
+	
+	border-radius: calc(var(--header-height) * 0.1);
 }
 
 #header .link {
-    --focus-box-size: calc(var(--header-height) * 0.3);
-
-    color: var(--color-primary);
-    margin: var(--header-link-margin);
-
-    text-decoration: none;
-    text-align: center;
-
-    border-radius: calc(var(--focus-box-size) * 0.5);
+	--focus-box-size: calc(var(--header-height) * 0.3);
+	
+	color: var(--color-primary);
+	margin: var(--header-link-margin);
+	
+	text-decoration: none;
+	text-align: center;
+	
+	border-radius: calc(var(--focus-box-size) * 0.5);
 }
 
 #header .link:hover {
-    padding: var(--focus-box-size);
-    padding-top: calc(var(--focus-box-size) / 2);
-    padding-bottom: calc(var(--focus-box-size) / 2);
-    margin: calc(var(--header-link-margin) - var(--focus-box-size));
-
-    background: var(--color-quinary-light);
+	padding: var(--focus-box-size);
+	padding-top: calc(var(--focus-box-size) / 2);
+	padding-bottom: calc(var(--focus-box-size) / 2);
+	margin: calc(var(--header-link-margin) - var(--focus-box-size));
+	
+	background: var(--color-quinary-light);
 }
