--- a/res/css/gameMenu/gameMenu.css
+++ b/res/css/gameMenu/gameMenu.css
@@ -2,6 +2,10 @@ body {
 	background-color: #222;
 }
 
+#title {
+	color: var(--color-primary);
+}
+
 #monitorcontainer {
 	display: flex;
 	align-items: center;
@@ -51,87 +55,8 @@ body {
 }
 
 #monitorscreen {
-	/* min-width: var(--size); */
-	/* min-height: var(--size); */
 	width: var(--size);
 	height: var(--size);
 
 	background: #aaa;
 }
-
-/* * https://codepen.io/leon-ho/pen/AEOvWP */
-
-/* #monitorcontainer {
-	max-width: 1024px;
-	width: 600px;
-	height: 600px;
-	margin: auto;
-	background: red;
-}
-
-#monitor {
-	background: #000; 
-	position: relative;
-	border-top: 3px solid #888; 
-	margin: 5%;
-	padding: 2% 2% 4% 2%; 
-	border-radius: 10px;
-	border-bottom-left-radius: 50% 2%; 
-	border-bottom-right-radius: 50% 2%; 
-	transition: margin-right 1s;
-}
-
-#monitor:after {
-	content: '';
-	display: block;
-	position: absolute;
-	bottom: 3%;
-	left: 36%;
-	height: .5%; 
-	width: 28%;
-	background: #ddd; 
-	border-radius: 50%;
-	box-shadow: 0 0 3px 0 white; 
-}
-
-#monitorscreen {
-	width: 600px;
-	height: 600px;
-
-	position: relative;
-	background-color: #777;
-	background-size: cover; 
-	background-position: top center;
-	height: 0; 
-	padding-bottom: 56.25%; 
-	position: relative;
-	overflow: hidden;
-} */
-
-
-/* @media all and (min-width: 960px) {
-	#monitor {
-		--flicker-speed: 1s;
-		-webkit-animation: tvflicker var(--flicker-speed) infinite alternate; 
-		-moz-animation:    tvflicker var(--flicker-speed) infinite alternate; 
-		-o-animation:      tvflicker var(--flicker-speed) infinite alternate; 
-		animation:         tvflicker var(--flicker-speed) infinite alternate; 
-	}
-	
-	@-webkit-keyframes tvflicker {
-		0%   { box-shadow: 0 0 100px 0 rgba(200,235,255,0.4); }
-		100% { box-shadow: 0 0 95px 0 rgba(200,230,255,0.45); }
-	}
-	@-moz-keyframes tvflicker {
-		0%   { box-shadow: 0 0 100px 0 rgba(225,235,255,0.4); }
-		100% { box-shadow: 0 0 60px 0 rgba(200,220,255,0.6); }
-	}
-	@-o-keyframes tvflicker {
-		0%   { box-shadow: 0 0 100px 0 rgba(225,235,255,0.4); }
-		100% { box-shadow: 0 0 60px 0 rgba(200,220,255,0.6); }
-	}
-	@keyframes tvflicker {
-		0%   { box-shadow: 0 0 100px 0 rgba(225,235,255,0.4); }
-		100% { box-shadow: 0 0 60px 0 rgba(200,220,255,0.6); }
-	}
-} */
