--- a/res/css/game/space_invaders/space_invaders.css
+++ b/res/css/game/space_invaders/space_invaders.css
@@ -7,14 +7,53 @@ body {
 }
 
 #mainmenu {
+	--btn-width: calc(var(--size) * 0.4);
+	--btn-height: calc(var(--size) * 0.1);
+
 	width: var(--size);
 	height: var(--size);
 	background-color: #222;
 
 	display: flex;
+	justify-content: center;
 }
 
 #btnstart {
+	--btn-3d-height: 10px;
+	--btn-3d-hover-height: 7px;
+	--btn-3d-active-height: 3px;
+
+	font-family: var(--font-family);
+	font-size: var(--font-size-sub-title);
+
 	position: relative;
-	bottom: calc(var(--size) * 0.1);
+	top: calc(var(--size) * 0.8);
+
+	width: var(--btn-width);
+	height: var(--btn-height);
+
+	background-color: var(--color-quinary);
+	color: var(--color-primary);
+
+	border: none;
+	border-radius: 10px;
+	border-bottom-left-radius: 65px;
+	border-top-right-radius: 65px;
+
+	transform: rotateX(10deg);
+	box-shadow: 0 var(--btn-3d-height) 0 0 var(--color-quinary-light);
+
+	transition: 0.15s;
+
+	cursor: pointer;
+}
+
+#btnstart:hover {
+	transform: translateY(calc(var(--btn-3d-height) - var(--btn-3d-hover-height)));
+	box-shadow: 0 var(--btn-3d-hover-height) 0 0 var(--color-quinary-light);
+}
+
+#btnstart:active {
+	transform: translateY(calc(var(--btn-3d-height) - var(--btn-3d-active-height)));
+	box-shadow: 0 var(--btn-3d-active-height) 0 0 var(--color-quinary-light);
 }
