btn start form space invaders refactored to be used on all the code

--- a/res/css/game/gameStyle.css
+++ b/res/css/game/gameStyle.css
@@ -9,3 +9,41 @@ body {
 canvas {
 	overflow: hidden;
 }
+
+/* Arcade btn */
+.arcade-btn {
+	--btn-3d-height: 10px;
+	--btn-3d-hover-height: 7px;
+	--btn-3d-active-height: 3px;
+
+	font-family: var(--font-family);
+	font-size: var(--font-size-sub-title);
+
+	width: var(--btn-width);
+	height: var(--btn-height);
+
+	background-color: var(--color-quinary);
+	color: var(--color-primary);
+
+	border: none;
+	border-radius: 10px;
+	border-bottom-left-radius: 65px;
+	border-top-right-radius: 65px;
+
+	transform: rotateX(10deg);
+	box-shadow: 0 var(--btn-3d-height) 0 0 var(--color-quinary-light);
+
+	transition: 0.15s;
+
+	cursor: pointer;
+}
+
+.arcade-btn:hover {
+	transform: translateY(calc(var(--btn-3d-height) - var(--btn-3d-hover-height)));
+	box-shadow: 0 var(--btn-3d-hover-height) 0 0 var(--color-quinary-light);
+}
+
+.arcade-btn:active {
+	transform: translateY(calc(var(--btn-3d-height) - var(--btn-3d-active-height)));
+	box-shadow: 0 var(--btn-3d-active-height) 0 0 var(--color-quinary-light);
+}
