Bug with startBtn on big screens fixed

--- a/res/css/game/space_invaders/space_invaders.css
+++ b/res/css/game/space_invaders/space_invaders.css
@@ -23,6 +23,8 @@ body {
 	display: flex;
 	justify-content: center;
 
+	position: relative;
+
 	background-image: url("../../../../res/img/space_invaders/background/background.png");
 }
 
