--- a/res/css/game/tictactoe/tictactoe.css
+++ b/res/css/game/tictactoe/tictactoe.css
@@ -36,7 +36,7 @@ body > div {
 .row {
 	--bars: 2;
 	--margin: 10px;
-	margin: var(--margin);
+	/* margin: var(--margin); */
 
 	display: flex;
 	flex-direction: column;
@@ -46,7 +46,10 @@ body > div {
 	
 
 	background: #222;
-
+/* 
 	width: calc(var(--size) / 3 - var(--bars) * var(--margin));
-	height: calc(var(--size) / 3 - var(--bars) * var(--margin));
+	height: calc(var(--size) / 3 - var(--bars) * var(--margin)); */
+	width: calc(var(--size) / 3 - var(--margin) * 2);
+	height: calc(var(--size) / 3 - var(--margin) * 2);
+	margin: var(--margin);
 }
