--- a/res/css/game/tictactoe/tictactoe.css
+++ b/res/css/game/tictactoe/tictactoe.css
@@ -48,10 +48,6 @@ body > div {
 	height: calc(var(--size) / 3 - var(--margin) * 2);
 	margin: var(--margin);
 
-	display: flex;
-	justify-content: center;
-	align-items: center;
-
 	--scale-line: 1;
 }
 
@@ -59,19 +55,34 @@ body > div {
 	--scale-line: 0;
 }
 
+.cell > div {
+	position: relative;
+}
+
+.cross {
+	width: 100%;
+	height: 100%;
+}
+
 .line {
-	background: #f00;
+	background: var(--color-primary);
 	width: calc(var(--size) / 3.5);
 	height: calc(var(--size) / 40);
 
 	transform: scale(var(--scale-line));
 	transition: 1s;
+
+	position: absolute;
+	top: calc(50% - var(--margin));
+	left: calc(var(--margin) * 0.5);
+
+	border-radius: 0.3rem;
 }
 
-.cross:nth-child(1) {
+.line:nth-child(1) {
 	transform: rotate(45deg) skew(-45deg);
 }
 
-.cross:nth-child(2) {
-	transform: rotate(-45deg);
+.line:nth-child(2) {
+	transform: rotate(-45deg) skew(45deg);
 }
