Logic to mark solution added

--- a/res/css/game/tictactoe/tictactoe.css
+++ b/res/css/game/tictactoe/tictactoe.css
@@ -63,6 +63,15 @@ body > div {
 	display: none;
 }
 
+.solution > .cross > div {
+	background: rgb(96, 173, 8);
+}
+
+
+.solution > .circle > div {
+	--color-primary: rgb(96, 173, 8);
+}
+
 
 /* Circle */
 .cell .circle > div {
