--- a/res/css/bugReport/bugReport.css
+++ b/res/css/bugReport/bugReport.css
@@ -10,11 +10,12 @@ select, input[type="date"], input[type="number"] {
 	box-sizing: border-box;
 	border: none;
 	position: relative;
-	border-bottom: 2px solid #ccc;
-	background-color: #f1f1f1;
 	border-radius: 7px;
 	text-align: center;
-	opacity: 0.7;
+}
+
+input {
+	opacity: 1;
 }
 
 fieldset {
@@ -23,7 +24,7 @@ fieldset {
 }
 
 textarea {
-	
+	color: black;
 }
 
 form {
