--- a/res/css/common/global_style.css
+++ b/res/css/common/global_style.css
@@ -1,12 +1,12 @@
 body {
 	--body-margin: 1rem;
 
-	background-color: var(--color-primary);
+	background-color: #222;
 	margin: 0px;
 
 	font-family: var(--font-family);
 	font-size: var(--font-size-text);
-	color: var(--color-quinary);
+	color: var(--color-primary);
 }
 
 body > * {
@@ -35,7 +35,6 @@ input[type=text] {
 	background-color: #f1f1f1;
 	border-radius: 7px;
 	text-align: center;
-	opacity: 0.7;
 }
 
 .button { 
