--- a/res/css/game/pong/pong.css
+++ b/res/css/game/pong/pong.css
@@ -3,12 +3,16 @@ body {
   /*background-image: url("https://media.giphy.com/media/7SF5scGB2AFrgsXP63/giphy.gif");*/
 }
 
-#startmenu{
-  display:flex;
-  flex-direction:column;
+.p5Canvas {
+  display: none;
+}
+
+#startmenu {
+  display: flex;
+  flex-direction: column;
   align-items: center;
 
-  position:relative;
+  position: relative;
 }
 
 /*#gamemenu{
@@ -40,12 +44,12 @@ body {
 	flex-direction: column;
 }*/
 
-#gamemenu{
+#gamemenu {
   display: block;
-	align-items: center;
-	flex-direction: column;
+  align-items: center;
+  flex-direction: column;
   justify-content: center;
-  width:800px;
+  width: 800px;
   height: 600px;
   background-color: #222;
 }
@@ -56,10 +60,7 @@ body {
   padding: 10px;
 }
 
-#btn-start{
+#btn-start {
   margin-top: 450px;
   padding: 15.7px;
 }
-
-
-
