--- a/res/css/game/pong/pong.css
+++ b/res/css/game/pong/pong.css
@@ -1,5 +1,5 @@
 body {
-  /* background-image: url("res/img/game/pong/pong.png");*/
+  /* background-image: url("res/js/pong_game/img/pong.gif");*/
 }
 
 .p5Canvas {
